--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>The Next Web</title>
 </head>
 <body>
-  
+  <header>
+  </header>
 </body>
 </html>
