add logo and fontawesome script

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 </head>
 <body>
   <header>
-    
+    <div>
+      <img src="images/tnw-logo.png" alt="TNW-logo">
+    </div>
+    <div>
+
+    </div>
   </header>
   <main>
     <section></section>
   </main>
+
+  <script src="https://kit.fontawesome.com/6abfc73bc9.js" crossorigin="anonymous"></script>
 </body>
 </html>
