add header the first ul

--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 <body>
   <header>
     <div>
+      <div>
+        <ul>
+          <li>News</li>
+          <li>Events</li>
+          <li>Business</li>
+          <li>AMAs</li>
+          <li>Spaces</li>
+          <li>Terms & Conditions</li>
+        </ul>
+      </div>
+      <div>
+        
+      </div>
+    </div>
+    <div>
       <img src="images/tnw-logo.png" alt="TNW-logo">
+
     </div>
     <div>
 
