add second ul to the 1st line of header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         </ul>
       </div>
       <div>
-        
+        <ul>
+          <li>About</li>
+          <li>Advertise</li>
+          <li>Jobs</li>
+          <li>Contact</li>
+        </ul>
       </div>
     </div>
     <div>
