add second element to header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,21 @@
       </div>
     </div>
     <div>
-      <img src="images/tnw-logo.png" alt="TNW-logo">
+      <div>
+        <img src="images/tnw-logo.png" alt="TNW-logo">
+        <ul>
+          <li>LATEST</li>
+          <li>HARD FORK</li>
+          <li>PLUGGED</li>
+          <li>README</li>
+          <li>GROWTH QUARTERS</li>
+        </ul>
+        <div>
+          <i class="fas fa-search"></i>
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
+
 
     </div>
     <div>
