Add last nav in header

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
           <i class="fas fa-bars"></i>
         </div>
       </div>
-
-
+      <p>Calling young digital talent in the Netherlands - Be recognized in the T500 →</p>
     </div>
     <div>
 
