Turn all li tags to links using the a tag

--- a/index.html
+++ b/index.html
@@ -9,46 +9,47 @@
 </head>
 <body>
   <header>
-    <div>
+    <nav>
       <div>
-        <ul>
-          <li>News</li>
-          <li>Events</li>
-          <li>Business</li>
-          <li>AMAs</li>
-          <li>Spaces</li>
-          <li>Terms & Conditions</li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li>About</li>
-          <li>Advertise</li>
-          <li>Jobs</li>
-          <li>Contact</li>
-        </ul>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img src="images/tnw-logo.png" alt="TNW-logo">
-        <ul>
-          <li>LATEST</li>
-          <li>HARD FORK</li>
-          <li>PLUGGED</li>
-          <li>README</li>
-          <li>GROWTH QUARTERS</li>
-        </ul>
         <div>
-          <i class="fas fa-search"></i>
-          <i class="fas fa-bars"></i>
+          <ul>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">AMAs</a></li>
+            <li><a href="#">Spaces</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Advertise</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </div>
       </div>
-      <p>Calling young digital talent in the Netherlands - Be recognized in the T500 →</p>
-    </div>
-    <div>
-
-    </div>
+      <div>
+        <div>
+          <img src="images/tnw-logo.png" alt="TNW-logo">
+          <ul>
+            <li><a href="#">LATEST</a></li>
+            <li><a href="#">HARD FORK</a></li>
+            <li><a href="#">PLUGGED</a></li>
+            <li><a href="#">README</a></li>
+            <li><a href="#">GROWTH QUARTERS</a></li>
+          </ul>
+          <div>
+            <a href="#"><i class="fas fa-search"></i></a>
+            <a href="#"><i class="fas fa-bars"></i></a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <a href="#"><p>Calling young digital talent in the Netherlands - Be recognized in the T500 →</p></a>
+      </div>
+    </nav>
   </header>
   <main>
     <section></section>
