--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <header>
-    <nav>
-      <div>
+    <nav class="flex">
+      <div class="dark-nav flex">
         <div>
-          <ul>
+          <ul class="flex">
             <li><a href="#">News</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Business</a></li>
@@ -22,7 +22,7 @@
           </ul>
         </div>
         <div>
-          <ul>
+          <ul class="flex">
             <li><a href="#">About</a></li>
             <li><a href="#">Advertise</a></li>
             <li><a href="#">Jobs</a></li>
@@ -33,20 +33,20 @@
       <div>
         <div>
           <img src="images/tnw-logo.png" alt="TNW-logo">
-          <ul>
+          <ul class="flex">
             <li><a href="#">LATEST</a></li>
             <li><a href="#">HARD FORK</a></li>
             <li><a href="#">PLUGGED</a></li>
             <li><a href="#">README</a></li>
             <li><a href="#">GROWTH QUARTERS</a></li>
           </ul>
-          <div>
+          <div class="flex">
             <a href="#"><i class="fas fa-search"></i></a>
             <a href="#"><i class="fas fa-bars"></i></a>
           </div>
         </div>
       </div>
-      <div>
+      <div class="flex">
         <a href="#"><p>Calling young digital talent in the Netherlands - Be recognized in the T500 →</p></a>
       </div>
     </nav>
