add white-hover class to html file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="flex">
       <div class="dark-nav flex">
         <div>
-          <ul class="flex">
+          <ul class="flex white-hover">
             <li><a href="#">News</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Business</a></li>
