add black-hover class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </ul>
         </div>
         <div>
-          <ul class="flex">
+          <ul class="flex white-hover">
             <li><a href="#">About</a></li>
             <li><a href="#">Advertise</a></li>
             <li><a href="#">Jobs</a></li>
@@ -33,14 +33,14 @@
       <div>
         <div>
           <img src="images/tnw-logo.png" alt="TNW-logo">
-          <ul class="flex">
+          <ul class="flex black-hover">
             <li><a href="#">LATEST</a></li>
             <li><a href="#">HARD FORK</a></li>
             <li><a href="#">PLUGGED</a></li>
             <li><a href="#">README</a></li>
             <li><a href="#">GROWTH QUARTERS</a></li>
           </ul>
-          <div class="flex">
+          <div class="flex black-hover">
             <a href="#"><i class="fas fa-search"></i></a>
             <a href="#"><i class="fas fa-bars"></i></a>
           </div>
