add white-nav class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </div>
       </div>
-      <div>
+      <div class="white-nav">
         <div>
           <img src="images/tnw-logo.png" alt="TNW-logo">
           <ul class="flex black-hover">
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="flex">
+      <div class="flex yellow-nav">
         <a href="#"><p>Calling young digital talent in the Netherlands - Be recognized in the T500 →</p></a>
       </div>
     </nav>
