--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
           </ul>
         </div>
       </div>
-      <div class="white-nav">
-        <div>
-          <img src="images/tnw-logo.png" alt="TNW-logo">
+      <div class="flex white-nav">
+        <img class="logo-img" src="images/tnw-logo.png" alt="TNW-logo">
           <ul class="flex black-hover">
             <li><a href="#">LATEST</a></li>
             <li><a href="#">HARD FORK</a></li>
@@ -43,8 +42,7 @@
           <div class="flex black-hover">
             <a href="#"><i class="fas fa-search"></i></a>
             <a href="#"><i class="fas fa-bars"></i></a>
-          </div>
-        </div>
+          </div>          
       </div>
       <div class="flex yellow-nav">
         <a href="#"><p>Calling young digital talent in the Netherlands - Be recognized in the T500 →</p></a>
