add style for icons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="flex white-nav">
-        <img class="logo-img" src="images/tnw-logo.png" alt="TNW-logo">
+          <img class="logo-img" src="images/tnw-logo.png" alt="TNW-logo">
           <ul class="flex black-hover">
             <li><a href="#">LATEST</a></li>
             <li><a href="#">HARD FORK</a></li>
@@ -39,7 +39,7 @@
             <li><a href="#">README</a></li>
             <li><a href="#">GROWTH QUARTERS</a></li>
           </ul>
-          <div class="flex black-hover">
+          <div class="flex black-hover display-m">
             <a href="#"><i class="fas fa-search"></i></a>
             <a href="#"><i class="fas fa-bars"></i></a>
           </div>          
