Add html tag structure for footer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
   <main>
     <section></section>
   </main>
-
+  <footer>
+    <div>
+      <div></div>
+      <div></div>
+    </div>
+    <div></div>
+  </footer>
   <script src="https://kit.fontawesome.com/6abfc73bc9.js" crossorigin="anonymous"></script>
 </body>
 </html>
