add icons for the footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
   </main>
   <footer>
     <div>
-      <div></div>
+      <div>
+        <a href="#"><i class="fab fa-facebook-square"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-instagram-square"></i></a>
+        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+        <a href="#"><i class="fas fa-wifi"></i></a>
+        <a href="#"><i class="fas fa-envelope"></i></a>
+      </div>
       <div></div>
     </div>
     <div></div>
