--- a/index.html
+++ b/index.html
@@ -63,9 +63,19 @@
         <a href="#"><i class="fas fa-wifi"></i></a>
         <a href="#"><i class="fas fa-envelope"></i></a>
       </div>
-      <div></div>
+      <div>
+        <ul>
+          <li><a href="#">EVENTS</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">ADVERTISE</a></li>
+          <li><a href="#">JOBS</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
-    <div></div>
+    <div>
+      <a href="#"><img src="images/tnw-logo-footer.jpg" alt="footer"> &copy; 2006-2021 The Next Web B.V. Made with <3 in Amsterdam. Powered by STACKPATH</a>
+    </div>
   </footer>
   <script src="https://kit.fontawesome.com/6abfc73bc9.js" crossorigin="anonymous"></script>
 </body>
