add footer styling

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <section></section>
   </main>
   <footer>
-    <div>
-      <div>
+    <div class="bg-lighter flex ">
+      <div class="flex">
         <a href="#"><i class="fab fa-facebook-square"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
@@ -64,7 +64,7 @@
         <a href="#"><i class="fas fa-envelope"></i></a>
       </div>
       <div>
-        <ul>
+        <ul class="flex">
           <li><a href="#">EVENTS</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">ADVERTISE</a></li>
@@ -74,7 +74,7 @@
       </div>
     </div>
     <div>
-      <a href="#"><img src="images/tnw-logo-footer.jpg" alt="footer"> &copy; 2006-2021 The Next Web B.V. Made with <3 in Amsterdam. Powered by STACKPATH</a>
+      <a href="#"><img src="images/tnw-logo-footer.jpg" alt="footer"> &copy; 2006-2021 The Next Web B.V. Made with &lt;3 in Amsterdam. Powered by STACKPATH</a>
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/6abfc73bc9.js" crossorigin="anonymous"></script>
