Add class to copyright in footer

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </ul>
       </div>
     </div>
-    <div>
-      <a href="#"><img src="images/tnw-logo-footer.jpg" alt="footer"> &copy; 2006-2021 The Next Web B.V. Made with &lt;3 in Amsterdam. Powered by STACKPATH</a>
+    <div class="flex footer-logo">
+      <a href="#"><img src="images/tnw-logo-footer.jpg" alt="footer"> &copy; 2006-2021 The Next Web B.V. Made with &lt;3 in Amsterdam. Powered by <strong class="stackpath">STACKPATH</strong></a>
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/6abfc73bc9.js" crossorigin="anonymous"></script>
