add styling for footer p tag

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="#"><i class="fas fa-envelope"></i></a>
       </div>
       <div>
-        <ul class="flex">
+        <ul class="flex footer-links">
           <li><a href="#">EVENTS</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">ADVERTISE</a></li>
@@ -74,7 +74,7 @@
       </div>
     </div>
     <div class="flex footer-logo">
-      <a href="#"><img src="images/tnw-logo-footer.jpg" alt="footer"> &copy; 2006-2021 The Next Web B.V. Made with &lt;3 in Amsterdam. Powered by <strong class="stackpath">STACKPATH</strong></a>
+      <a href="#"><img src="images/tnw-logo-footer.jpg" alt="footer"></a><p>&copy; 2006-2021 The Next Web B.V. Made with &lt;3 in Amsterdam. Powered by</p><a href="#"><strong class="stackpath">STACKPATH</strong></a>
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/6abfc73bc9.js" crossorigin="anonymous"></script>
