add transparent logo image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main>
     <section class="highlights flex">
       <div class="highlight opal flex">
-        <img src="images/tnw- logo1.png" alt="big logo tnw">
+        <img src="images/logo-transparent.png" alt="big logo tnw">
         <h1>Opal cuts off your apps’ internet access to help you stop doomscrolling</h1>
         <ul class="flex">
           <li>by <a href="#">Ivan Mehta</a></li>
