add styling for highlights in 600px width

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><i class="fas fa-share-alt"></i> 6</li>
         </ul>
       </div>
-      <div>
+      <div class="sub-container">
         <div class="sub-highlight flex google">
           <h2>Google unveils privacy-friendly AI cookie killer</h2>
         <ul class="flex">
