Add section for latest funding

--- a/index.html
+++ b/index.html
@@ -79,7 +79,21 @@
           </ul>
         </div>
       </div>
-
+    </section>
+    <section class="latest">
+      <div>
+        <h2>Latest funding rounds on Index.co </h2>
+      </div>
+      <div>
+        <ul>
+          <li><a href="#">Add info</a></li>
+          <li><a href="#">Get updates by email</a></li>
+          <li><a href="#">See more</a></li>
+        </ul>
+      </div>
+      <div>
+        
+      </div>
     </section>
   </main>
   <footer>
