add html for latest fundings- boxes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,67 @@
         </ul>
       </div>
       <div>
-        
+        <div class="box">
+          <div class="top-box">
+            <img src="images/funding-1.png" alt="Ringover">
+            <h4>Ringover</h4>
+            <p>$ 12M</p><br>
+            <p>SERIES A</p>
+          </div>
+          <div class="center-box">
+            <a href="#"><i class="fas fa-tag"></i> Telecomunications</a>
+            <a href="#"><i class="fas fa-briefcase"></i> Expedition Growth Capital</a>
+          </div>
+          <div class="bottom-box">
+            <p>Ringover raises $12 million to bring enterprise communications to the cloud <a href="#">on VentureBeat</a></p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="top-box">
+            <img src="images/funding-2.jpeg" alt="SwissDeCode">
+            <h4>SwissDeCode</h4>
+            <p>$ 4.2M</p><br>
+            <p>VENTURE CAPITAL</p>
+          </div>
+          <div class="center-box">
+            <a href="#"><i class="fas fa-tag"></i> Biotechnology</a>
+            <a href="#"><i class="fas fa-briefcase"></i> VisVires New Protein</a>
+          </div>
+          <div class="bottom-box">
+            <p>BREAKING: Food testing startup SwissDeCode nets $4.2m from VisVires New Protein, EIT Food <a href="#">on AgFunderNews</a></p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="top-box">
+            <img src="images/funding-3.jpeg" alt="Klook">
+            <h4>Klook</h4>
+            <p>$ 200M</p><br>
+            <p>SERIES E</p>
+          </div>
+          <div class="center-box">
+            <a href="#"><i class="fas fa-tag"></i> Internet</a>
+            <a href="#"><i class="fas fa-briefcase"></i> Boyu Capital, +4</a>
+          </div>
+          <div class="bottom-box">
+            <p>SoftBank-backed travel platform Klook raises $200M amid COVID-19 <a href="#">on TechCrunch</a></p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="top-box">
+            <img src="images/funding-4.jpeg" alt="Wolt">
+            <h4>Wolt</h4>
+            <p>$ 530M</p><br>
+            <p>VENTURE CAPITAL</p>
+          </div>
+          <div class="center-box">
+            <a href="#"><i class="fas fa-tag"></i> Mobile, +5</a>
+            <a href="#"><i class="fas fa-briefcase"></i> DST Global, +9</a>
+          </div>
+          <div class="bottom-box">
+            <p>
+            Food delivery startup Wolt raises $530M after tripling revenues <a href="#">on SiliconANGLE</a></p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
