add style for main container of latest section

--- a/index.html
+++ b/index.html
@@ -80,18 +80,16 @@
         </div>
       </div>
     </section>
-    <section class="latest">
-      <div>
-        <h2>Latest funding rounds on Index.co </h2>
-      </div>
-      <div>
+    <section class="latest flex">
+      <div class="latest-heading flex">
+        <h2>Latest funding rounds on Index.co  	&gt;</h2>
         <ul>
           <li><a href="#">Add info</a></li>
           <li><a href="#">Get updates by email</a></li>
           <li><a href="#">See more</a></li>
         </ul>
-      </div>
-      <div>
+      </div>      
+      <div class="boxes">
         <div class="box">
           <div class="top-box">
             <img src="images/funding-1.png" alt="Ringover">
