Add styling to latest funding header

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="latest flex">
       <div class="latest-heading flex">
         <h2>Latest funding rounds on Index.co  	&gt;</h2>
-        <ul>
+        <ul class="flex">
           <li><a href="#">Add info</a></li>
           <li><a href="#">Get updates by email</a></li>
           <li><a href="#">See more</a></li>
