add top-box styling for mobile screen

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         <div class="box">
           <div class="top-box">
             <img src="images/funding-1.png" alt="Ringover">
-            <h4>Ringover</h4>
-            <p>$ 12M</p><br>
-            <p>SERIES A</p>
+            <a href="#"><h4>Ringover</h4></a>
+            <a href="#"><p class="value">$12M</p></a>
+            <a href="#"><p class="series">SERIES A</p></a>
           </div>
           <div class="center-box">
             <a href="#"><i class="fas fa-tag"></i> Telecomunications</a>
@@ -108,9 +108,9 @@
         <div class="box">
           <div class="top-box">
             <img src="images/funding-2.jpeg" alt="SwissDeCode">
-            <h4>SwissDeCode</h4>
-            <p>$ 4.2M</p><br>
-            <p>VENTURE CAPITAL</p>
+            <a href="#"><h4>SwissDeCode</h4></a>
+            <a href="#"><p class="value">$4.2M</p></a>
+            <a href="#"><p class="series">VENTURE CAPITAL</p></a>
           </div>
           <div class="center-box">
             <a href="#"><i class="fas fa-tag"></i> Biotechnology</a>
@@ -123,9 +123,9 @@
         <div class="box">
           <div class="top-box">
             <img src="images/funding-3.jpeg" alt="Klook">
-            <h4>Klook</h4>
-            <p>$ 200M</p><br>
-            <p>SERIES E</p>
+            <a href="#"><h4>Klook</h4></a>
+            <a href="#"><p class="value">$200M</p></a>
+            <a href="#"><p class="series">SERIES E</p></a>
           </div>
           <div class="center-box">
             <a href="#"><i class="fas fa-tag"></i> Internet</a>
@@ -138,9 +138,9 @@
         <div class="box">
           <div class="top-box">
             <img src="images/funding-4.jpeg" alt="Wolt">
-            <h4>Wolt</h4>
-            <p>$ 530M</p><br>
-            <p>VENTURE CAPITAL</p>
+            <a href="#"><h4>Wolt</h4></a>
+            <a href="#"><p class="value">$530M</p></a>
+            <a href="#"><p class="series">VENTURE CAPITAL</p></a>
           </div>
           <div class="center-box">
             <a href="#"><i class="fas fa-tag"></i> Mobile, +5</a>
