add center-box styling for mobile screen

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a href="#"><p class="value">$12M</p></a>
             <a href="#"><p class="series">SERIES A</p></a>
           </div>
-          <div class="center-box">
+          <div class="center-box flex">
             <a href="#"><i class="fas fa-tag"></i> Telecomunications</a>
             <a href="#"><i class="fas fa-briefcase"></i> Expedition Growth Capital</a>
           </div>
