Revert "Add styling to bottom box of latest funding for mobile screen size"
This reverts commit 5373ba660af558563fee3be72e86927d31af1e06.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <a href="#"><i class="fas fa-briefcase"></i> Expedition Growth Capital</a>
           </div>
           <div class="bottom-box">
-            <a href="#"><p>Ringover raises $12 million to bring enterprise communications to the cloud <span>on VentureBeat</span></p></a>
+            <p>Ringover raises $12 million to bring enterprise communications to the cloud <a href="#">on VentureBeat</a></p>
           </div>
         </div>
         <div class="box">
@@ -112,12 +112,12 @@
             <a href="#"><p class="value">$4.2M</p></a>
             <a href="#"><p class="series">VENTURE CAPITAL</p></a>
           </div>
-          <div class="center-box flex">
+          <div class="center-box">
             <a href="#"><i class="fas fa-tag"></i> Biotechnology</a>
             <a href="#"><i class="fas fa-briefcase"></i> VisVires New Protein</a>
           </div>
           <div class="bottom-box">
-            <a href="#"><p>BREAKING: Food testing startup SwissDeCode nets $4.2m from VisVires New Protein, EIT Food <span>on AgFunderNews</span></p></a>
+            <p>BREAKING: Food testing startup SwissDeCode nets $4.2m from VisVires New Protein, EIT Food <a href="#">on AgFunderNews</a></p>
           </div>
         </div>
         <div class="box">
@@ -127,12 +127,12 @@
             <a href="#"><p class="value">$200M</p></a>
             <a href="#"><p class="series">SERIES E</p></a>
           </div>
-          <div class="center-box flex">
+          <div class="center-box">
             <a href="#"><i class="fas fa-tag"></i> Internet</a>
             <a href="#"><i class="fas fa-briefcase"></i> Boyu Capital, +4</a>
           </div>
           <div class="bottom-box">
-            <a href="#"><p>SoftBank-backed travel platform Klook raises $200M amid COVID-19 <span>on TechCrunch</span></p></a>
+            <p>SoftBank-backed travel platform Klook raises $200M amid COVID-19 <a href="#">on TechCrunch</a></p>
           </div>
         </div>
         <div class="box">
@@ -142,12 +142,13 @@
             <a href="#"><p class="value">$530M</p></a>
             <a href="#"><p class="series">VENTURE CAPITAL</p></a>
           </div>
-          <div class="center-box flex">
+          <div class="center-box">
             <a href="#"><i class="fas fa-tag"></i> Mobile, +5</a>
             <a href="#"><i class="fas fa-briefcase"></i> DST Global, +9</a>
           </div>
           <div class="bottom-box">
-            <a href="#"><p>Food delivery startup Wolt raises $530M after tripling revenues <span>on SiliconANGLE</span></p></a>
+            <p>
+            Food delivery startup Wolt raises $530M after tripling revenues <a href="#">on SiliconANGLE</a></p>
           </div>
         </div>
       </div>
