add style for hidden boxes

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <a href="#"><p>BREAKING: Food testing startup SwissDeCode nets $4.2m from VisVires New Protein, EIT Food <span>on AgFunderNews</span></p></a>
           </div>
         </div>
-        <div class="box">
+        <div class="box hidden">
           <div class="top-box">
             <img src="images/funding-3.jpeg" alt="Klook">
             <a href="#"><h4>Klook</h4></a>
@@ -135,7 +135,7 @@
             <a href="#"><p>SoftBank-backed travel platform Klook raises $200M amid COVID-19 <span>on TechCrunch</span></p></a>
           </div>
         </div>
-        <div class="box">
+        <div class="box hidden">
           <div class="top-box">
             <img src="images/funding-4.jpeg" alt="Wolt">
             <a href="#"><h4>Wolt</h4></a>
