add html structure for category section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,77 @@
         </div>
       </div>
     </section>
+    <section class="categories">
+      <div class="category flex">
+        <h2>Hard Fork  &gt;</h2>
+        <div class="top-category flex">
+          <p>MOST POPULAR</p>
+          <h3>GameStop stocks hit record high - thanks to Redditors</h3>
+          <ul class="flex">
+            <li>by <a href="#">Ivan Mehta </a></li>
+            <li> 	&bull; 1 day ago</li>
+          </ul>
+        </div>
+        <div class="center-category">
+          <img src="images/sub-categories-1.jpg" alt="Jack Ma - Founder of ALi Baba">
+          <p>LATEST</p>
+          <a href="#"><h3>Alibaba shares jump 8% as Jack Ma surfaces after 3 months</h3></a>
+        </div>
+        <ul class="bottom-category">
+          <li><a href="#">Twitter shares fall 7% in pre-market trading after Trump's removal </a></li>
+          <li><a href="#">Winklevoss comes out of meditation to witness Bitcoin's record high</a></li>
+          <li><a href="#">CD Projekt Rekt: Cyberpunk 2077 tanks studio's share price nearly 50%</a></li>
+          <li><a href="#">CD Projekt stock down 20% since Cyberpunk reviews hit the internet</a></li>
+          <li><a href="#">Airbnb to be bigger than eBay after its long-awaited IPO </a></li>
+        </ul>
+      </div>
+      <div class="category flex" id="second-category">
+        <h2>Apps  &gt;</h2>
+        <div class="top-category flex">
+          <p>MOST POPULAR</p>
+          <h3>Google Maps is adding COVID19 vaccine sites</h3>
+          <ul class="flex">
+            <li>by <a href="#">Napier Lopez </a></li>
+            <li> 	&bull; 17 hours ago</li>
+          </ul>
+        </div>
+        <div class="center-category">
+          <img src="images/news-2.png" alt="Bernie sitting meme ">
+          <p>LATEST</p>
+          <a href="#"><h3>Help kill the 'Bernie sitting' meme with this easy-to-use image generator</h3></a>
+        </div>
+        <ul class="bottom-category">
+          <li><a href="#">Signal is drama-free for now, but it should prepare for the worst  </a></li>
+          <li><a href="#">Birdwatch is Twitter's new community-based fact checker </a></li>
+          <li><a href="#">Google Maps is adding COVID19 vaccine sites </a></li>
+          <li><a href="#">Google Search has a new mobile design — come spot the differences </a></li>
+          <li><a href="#">Microsoft Edge gets 'sleeping' tabs and a password generator </a></li>
+        </ul>
+      </div>
+      <div class="category flex" id="third-category">
+        <h2>Gear  &gt;</h2>
+        <div class="top-category flex">
+          <p>MOST POPULAR</p>
+          <h3>Report: Apple may bring MagSafe and SD card slots back to MacBook</h3>
+          <ul class="flex">
+            <li>by <a href="#">Napier Lopez </a></li>
+            <li> 	&bull; 3 days ago</li>
+          </ul>
+        </div>
+        <div class="center-category">
+          <img src="images/sub-categories-1.jpg" alt="Jack Ma - Founder of ALi Baba">
+          <p>LATEST</p>
+          <a href="#"><h3>Report: Apple to make a plain old VR headset before its fancy AR glasses</h3></a>
+        </div>
+        <ul class="bottom-category">
+          <li><a href="#">KEF's new basketball-sized subwoofer promises 'maximum bass in minimum space' </a></li>
+          <li><a href="#">Qualcomm's new Snapdragon 870 is an 'almost-flagship' chip for Android phones </a></li>
+          <li><a href="#">How to manage your screen time during the lockdown, according to science </a></li>
+          <li><a href="#">How sleep trackers can actually ruin your sleep </a></li>
+          <li><a href="#">Report: Apple is building foldable iPhone prototypes</a></li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer>
     <div class="bg-lighter flex ">
