Add styling to category for mobile sixe

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </ul>
         </div>
         <div class="center-category">
-          <img src="images/news-2.png" alt="Bernie sitting meme ">
+          <img src="images/sub-categories-2.png" alt="Bernie sitting meme ">
           <p>LATEST</p>
           <a href="#"><h3>Help kill the 'Bernie sitting' meme with this easy-to-use image generator</h3></a>
         </div>
@@ -210,7 +210,7 @@
           </ul>
         </div>
         <div class="center-category">
-          <img src="images/sub-categories-1.jpg" alt="Jack Ma - Founder of ALi Baba">
+          <img src="images/sub-categories-3.jpg" alt="Apple">
           <p>LATEST</p>
           <a href="#"><h3>Report: Apple to make a plain old VR headset before its fancy AR glasses</h3></a>
         </div>
