add style for top-category

--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
         <h2>Hard Fork  &gt;</h2>
         <div class="top-category flex">
           <p>MOST POPULAR</p>
-          <h3>GameStop stocks hit record high - thanks to Redditors</h3>
+          <a class="hover-underline" href="#"><h3>GameStop stocks hit record high - thanks to Redditors</h3></a>
           <ul class="flex">
-            <li>by <a href="#">Ivan Mehta </a></li>
-            <li> 	&bull; 1 day ago</li>
+            <li> <a href="#">Ivan Mehta &nbsp;</a></li>
+            <li>&bull; 1 day ago</li>
           </ul>
         </div>
         <div class="center-category">
           <img src="images/sub-categories-1.jpg" alt="Jack Ma - Founder of ALi Baba">
           <p>LATEST</p>
-          <a href="#"><h3>Alibaba shares jump 8% as Jack Ma surfaces after 3 months</h3></a>
+          <a href="#"><h4>Alibaba shares jump 8% as Jack Ma surfaces after 3 months</h4></a>
         </div>
         <ul class="bottom-category">
           <li><a href="#">Twitter shares fall 7% in pre-market trading after Trump's removal </a></li>
@@ -180,16 +180,16 @@
         <h2>Apps  &gt;</h2>
         <div class="top-category flex">
           <p>MOST POPULAR</p>
-          <h3>Google Maps is adding COVID19 vaccine sites</h3>
+          <a class="hover-underline" href="#"><h3>Google Maps is adding COVID19 vaccine sites</h3></a>
           <ul class="flex">
-            <li>by <a href="#">Napier Lopez </a></li>
+            <li> <a href="#">Napier Lopez &nbsp;</a></li>
             <li> 	&bull; 17 hours ago</li>
           </ul>
         </div>
         <div class="center-category">
           <img src="images/sub-categories-2.png" alt="Bernie sitting meme ">
           <p>LATEST</p>
-          <a href="#"><h3>Help kill the 'Bernie sitting' meme with this easy-to-use image generator</h3></a>
+          <a  href="#"><h3>Help kill the 'Bernie sitting' meme with this easy-to-use image generator</h3></a>
         </div>
         <ul class="bottom-category">
           <li><a href="#">Signal is drama-free for now, but it should prepare for the worst  </a></li>
@@ -203,9 +203,9 @@
         <h2>Gear  &gt;</h2>
         <div class="top-category flex">
           <p>MOST POPULAR</p>
-          <h3>Report: Apple may bring MagSafe and SD card slots back to MacBook</h3>
+          <a class="hover-underline" href="#"><h3>Report: Apple may bring MagSafe and SD card slots back to MacBook</h3></a>
           <ul class="flex">
-            <li>by <a href="#">Napier Lopez </a></li>
+            <li> <a href="#">Napier Lopez &nbsp;</a></li>
             <li> 	&bull; 3 days ago</li>
           </ul>
         </div>
