add top-category style for tablet size

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
         </div>
       </div>
     </section>
-    <section class="categories">
+    <section class="categories flex">
       <div class="category flex">
         <h2>Hard Fork  &gt;</h2>
-        <div class="top-category flex">
+        <div class="top-category flex bg-1">
           <p>MOST POPULAR</p>
           <a class="hover-underline" href="#"><h3>GameStop stocks hit record high - thanks to Redditors</h3></a>
           <ul class="flex">
@@ -178,7 +178,7 @@
       </div>
       <div class="category flex" id="second-category">
         <h2>Apps  &gt;</h2>
-        <div class="top-category flex">
+        <div class="top-category flex bg-2">
           <p>MOST POPULAR</p>
           <a class="hover-underline" href="#"><h3>Google Maps is adding COVID19 vaccine sites</h3></a>
           <ul class="flex">
@@ -201,7 +201,7 @@
       </div>
       <div class="category flex" id="third-category">
         <h2>Gear  &gt;</h2>
-        <div class="top-category flex">
+        <div class="top-category flex bg-3">
           <p>MOST POPULAR</p>
           <a class="hover-underline" href="#"><h3>Report: Apple may bring MagSafe and SD card slots back to MacBook</h3></a>
           <ul class="flex">
