add html stucture for latest news

--- a/index.html
+++ b/index.html
@@ -223,6 +223,92 @@
         </ul>
       </div>
     </section>
+    <section class="news flex">
+      <h2>Latest news  &gt;</h2>
+      <div class="sub-news flex">
+        <img src="images/news-1.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>Want to drive a hydrogen EV in the US? Move to California </h4></a>
+          <ul class="flex">
+            <li> <a href="#">Matthew Beedham &nbsp;</a></li>
+            <li> 	&bull; 22 minutes ago</li>
+          </ul>
+        </div>
+        
+      </div>
+      <div class="sub-news flex">
+        <img src="images/news-2.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>Help kill the ‘Bernie sitting’ meme with this easy-to-use image generator  </h4></a>
+          <ul class="flex">
+            <li> <a href="#">Callum Booth &nbsp;</a></li>
+            <li> 	&bull; 3 hours ago</li>
+          </ul>
+        </div>  
+        
+      </div>
+      <div class="sub-news flex">
+        <img src="images/news-3.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>Uber expands its low-emission ride options to 1,400 more North American cities</h4></a>
+        <ul class="flex">
+          <li> <a href="#">Cities Today &nbsp;</a></li>
+          <li> 	&bull; 5 hours ago</li>
+        </ul>
+        </div>  
+      </div>
+      <div class="sub-news flex">
+        <img src="images/news-4.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>3 reasons why almost every VC investor passed on Zoom </h4></a>
+          <ul class="flex">
+            <li> <a href="#">Philip Levinson &nbsp;</a></li>
+            <li> 	&bull; 5 hours ago</li>
+          </ul>
+        </div> 
+      </div>
+      <div class="sub-news flex">
+        <img src="images/news-5.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>It’s happening! World’s biggest diesel factory pivots to electric motors </h4></a>
+          <ul class="flex">
+            <li> <a href="#">Matthew Beedham &nbsp;</a></li>
+            <li> 	&bull; 6 hours ago</li>
+          </ul>
+        </div> 
+      </div>
+      <div class="sub-news flex">
+        <img src="images/news-6.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>This nearly inexplicable exoplanet has the density of cotton candy</h4></a>
+          <ul class="flex">
+            <li> <a href="#">The Cosmic Companion &nbsp;</a></li>
+            <li> 	&bull; 6 hours ago</li>
+          </ul>
+        </div> 
+      </div>
+      <div class="sub-news flex">
+        <img src="images/news-7.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>The future of US government vehicles is electric </h4></a>
+          <ul class="flex">
+            <li> <a href="#">Matthew Beedham &nbsp;</a></li>
+            <li> 	&bull; 7 hours ago</li>
+          </ul>
+        </div> 
+      </div>
+      <div class="sub-news flex">
+        <img src="images/news-8.png" alt="Golden gate bridge">
+        <div class="wrapper flex">
+          <a href="#"><h4>Signal is drama-free for now, but it should prepare for the worst </h4></a>
+          <ul class="flex">
+            <li> <a href="#">Abhimanyu Ghoshal
+              &nbsp;</a></li>
+            <li> 	&bull; 8 hours ago</li>
+          </ul>
+        </div> 
+      </div>
+    </section>
   </main>
   <footer>
     <div class="bg-lighter flex ">
