add html structure for latest deals

--- a/index.html
+++ b/index.html
@@ -310,6 +310,94 @@
         </div>
       </div>
     </section>
+    <section class="news flex">
+      <div class="flex latest-heading">
+        <h2>Latest deals  &gt;</h2>
+        <p>See all Deals</p>
+      </div>
+      <div class="grid-container">
+        <div class="sub-news flex">
+          <img src="images/deals-1.jpg" alt="Glasses">
+          <div class="wrapper flex">
+            <a href="#"><h4>The Ultimate 2021 White Hat Hacker Certification Bundle</h4></a>
+            <ul class="flex">
+              <li> <span class="strike-through">$1345</span> &nbsp;</li>
+              <li> $39.90</li>
+            </ul>
+          </div>
+        </div>
+        <div class="sub-news flex">
+          <img src="images/deals-2.jpg" alt="Premium Bundle">
+          <div class="wrapper flex">
+            <a href="#"><h4>The Premium 2021 Project & Quality Management Certification Bundle </h4></a>
+            <ul class="flex">
+              <li> <span class="strike-through">$4400</span> &nbsp;</li>
+              <li> $45.99</li>
+            </ul>
+          </div>  
+        </div>
+        <div class="sub-news flex">
+          <img src="images/deals-3.jpg" alt="Pro Google SEO">
+          <div class="wrapper flex">
+            <a href="#"><h4>The Pro Google SEO & SERP Certification Bundle</h4></a>
+          <ul class="flex">
+            <li> <span class="strike-through">$2000</span> &nbsp;</li>
+            <li> $29</li>
+          </ul>
+          </div>  
+        </div>
+        <div class="sub-news flex">
+          <img src="images/deals-4.jpg" alt="Microsoft Azure">
+          <div class="wrapper flex">
+            <a href="#"><h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4></a>
+            <ul class="flex">
+              <li> <span class="strike-through">$1839</span> &nbsp;</li>
+              <li> $39</li>
+            </ul>
+          </div> 
+        </div>
+        <div class="sub-news flex">
+          <img src="images/deals-5.jpg" alt="IPVanish">
+          <div class="wrapper flex">
+            <a href="#"><h4>IPVanish VPN: 1-Yr Subscription</h4></a>
+            <ul class="flex">
+              <li> <span class="strike-through">$143</span> &nbsp;</li>
+              <li> $29</li>
+            </ul>
+          </div> 
+        </div>
+        <div class="sub-news flex">
+          <img src="images/deals-6.jpg" alt="X Music">
+          <div class="wrapper flex">
+            <a href="#"><h4>The Ultimate Logic Pro X Music Production Bundle</h4></a>
+            <ul class="flex">
+              <li> <span class="strike-through">$690</span> &nbsp;</li>
+              <li> $29</li>
+            </ul>
+          </div> 
+        </div>
+        <div class="sub-news flex">
+          <img src="images/deals-7.jpg" alt="Azure certification">
+          <div class="wrapper flex">
+            <a href="#"><h4>The 2021 Complete Microsoft Azure Certification Prep Bundle </h4></a>
+            <ul class="flex">
+              <li> <span class="strike-through">$1194</span> &nbsp;</li>
+              <li> $34.99</li>
+            </ul>
+          </div> 
+        </div>
+        <div class="sub-news flex">
+          <img src="images/deals-8.jpg" alt="Familio">
+          <div class="wrapper flex">
+            <a href="#"><h4>Familio Private Backup Platform: Lifetime Subscription</h4></a>
+            <ul class="flex">
+              <li> <span class="strike-through">$300</span> &nbsp;</li>
+              <li> $39.99</li>
+            </ul>
+          </div> 
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     <div class="bg-lighter flex ">
