Add styling to latest deals section for mobile screen size

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
       </div>
     </section>
-    <section class="news flex">
+    <section class="news deals flex">
       <div class="flex latest-heading">
         <h2>Latest deals  &gt;</h2>
         <p>See all Deals</p>
